Homework3_DSBD/kind/manifests/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: my-app
  labels:
    name: my-app
---
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
  labels:
    name: monitoring
