Homework3_DSBD/kind/manifests/data-collector-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: data-collector
  labels:
    app: data-collector
spec:
  ports:
    - name: prom-metrics
      port: 9999
      targetPort: 9999
  selector:
    app: data-collector


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-collector
  name: data-collector-deployment
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
        network/kafka-network: "true"
    spec:
      containers:
        - image: marsilence/progetto-dsbd:data_collector_img
          imagePullPolicy: IfNotPresent
          name: data-collector-cntr
          ports:
            - containerPort: 9999 # Porta in cui il container espone le metriche per prometheus   
      imagePullSecrets:
        - name: my-registry-secret  # Usa il secret creato per autenticarti
      restartPolicy: Always
